# project-unforgiven-core

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  eslint.config.mjs  hardhat.config.js  package-lock.json  package.json  rust-toolchain.toml  siege_bots.py  tailwind.config.ts  tsconfig.json
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
app/: globals.css  layout.tsx  page.tsx
components/: AppWalletProvider.tsx  BuyTicketButton.tsx  IdentityVerifier.tsx  InitializeButton.tsx  JCurveChart.tsx  PriceTicker.tsx  SimulationPanel.tsx  TicketMarketplace.tsx  TicketWallet.tsx
configs/: sentinel_config_v2.demo.toml  sentinel_config_v2.devnet.toml  sentinel_config_v2.toml  sentinel_thresholds_v2.example.toml
contracts/: UnforgivenTicket.sol
crates/sentinel/: Cargo.toml  README.md
crates/sentinel/src/: main.rs
docs/: ANCHOR_BUILD.md  DESIGN_SYSTEM.md  PROD_GO_LIVE_CHECKLIST_CN.md  PR_NEXT16_SECURITY.md  VERSION_MAP.md
hooks/: useBuyTicket.ts  useGlobalState.ts  useProgram.ts  useProgramId.ts  useShieldFlow.ts  useTicketPortfolio.ts  useUnforgivenProgram.ts  useVrgdaPrice.ts
lib/: shield_score.ts  unforgiven-v2-client.ts
programs/unforgiven_v2/: Cargo.toml
programs/unforgiven_v2/src/: hide_sis_types.rs  lib.rs  unforgiven_math.rs
programs/unforgiven_v2/tests/: preview_payload.rs  unforgiven_math_test.rs
public/: manifest.json
scripts/: alerts_v2.sh  anchor_daily_v2.sh  burst_preview_v2.js  cargo-build-bpf  check_getrandom_patch.js  check_program_id_consistency.js  debug-anchor-build.js  demo_v2.sh  deploy_v2_devnet.sh  down_v2.sh  generate-admin-key.ts  generate_oracle_keypair_v2.js  init_admin_v2.js  loom_shadow_demo.sh  ops_smoke_v2.sh  render_simple_md_pdf.py  reset_admin_v2.js  setup_github_anchor_secrets.sh  smoke_plugin_ticket_v2.js  smoke_preview_builder.js  smoke_ticket_v2.js  solana_program_ids.js  status_v2.sh  sync-deploy.js  up_v2.sh  (+3 more)
(+165 files in other folders)
