[workspace]
members = [
    "programs/unforgiven",
    "programs/unforgiven_v2",
    "crates/sentinel"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Legacy dependency override notes (kept for reference only):
# [patch.crates-io]
# wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.19.2" }
# spdx = { git = "https://github.com/ehuss/spdx-rs", tag = "v0.10.6" }
# blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.3.3" }
