[package]
name = "sentinel-service-v2"
version = "0.1.0"
edition = "2021"
description = "Wan Wan Sentinel v2 governance daemon"

[[bin]]
name = "sentinel-service-v2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5.1"
futures-util = "0.3"
rig = { package = "rig-core", version = "0.16.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
